# kortex_core

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  arch_discussion.md  issues.md  main.py  pi-session-2026-05-24T13-51-06-302Z_019e5a40-f23e-72d5-9d4e-427c0b9ae2b3.html  progress.md  pyproject.toml  session1.md  test_kuzu_db  test_kuzu_db.shadow
kortex/: agent.py  configured_interaction.py  configured_interpreter.py  domain_package.py  intent_runtime.py  interaction.py  optimization.py  responses.py  tracing.py
kortex/config/: bootstrapper.py  validation.py
kortex/extractor/: __init__.py  client.py  models.py
kortex/memory/: __init__.py  adapters.py  facts.py  hydrator.py  manager.py  records.py  reflector.py  working.py
kortex/plugins/: registry.py
kortex/sandbox/: chunker.py  novelty.py  validator.py
kortex/spine/: driver.py  orchestrator.py  (+1 more)
notes/: travel_concierge_scenario.md
scenarios/: harness.py  run_demo.py  test_scenarios.py  travel_concierge.py  travel_interaction_cli.py
tests/: test_agent_loop.py  test_chunker.py  test_configured_interaction.py  test_configured_interpreter.py  test_domain_package.py  test_domain_validation.py  test_e2e_bootstrapper.py  test_extractor.py  test_hitl.py  test_hydrator.py  test_intent_runtime.py  test_interaction.py  test_memory_records.py  test_novelty.py  test_optimizer.py  test_orchestrator.py  test_plugin_registry.py  test_reflector.py  test_responses.py  test_subagent_enclosure.py  test_travel_concierge_demo.py  test_travel_interaction_cli.py  test_travel_interaction_config.py  test_validator.py
(+6 files in other folders)
