[project]
name = "kortex-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "unified-planning>=1.1.0",
    "pyperplan>=2.1",
    "up-pyperplan>=1.1.0",
    "pydantic>=2.7.0",
    "instructor>=1.3.0",
    "google-genai>=0.2.0",
    "pyyaml>=6.0.1",
    "networkx>=3.0",
    "kuzu>=0.11.0",
    "graphiti-core>=0.29.0"
]
